[package]
name = "pending"
authors = ["ErisianArchitect <https://github.com/ErisianArchitect>"]
version = "0.1.1"
edition = "2024"
repository = "https://github.com/ErisianArchitect/pending"
description = "A library for a lockfree worker thread responder for communicating a value back to the caller thread."
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/pending"
# Do not publish until you bump the version to 1.0.0
# DO NOT PUBLISH UNTIL YOU ARE CERTAIN THAT EVERYTHING IS READY FOR PUBLISHING! Check everything!
publish = false

[features]
default = []
rayon = ["dep:rayon"]

[dependencies]
rayon = { version = "1.11.0", optional = true }
thiserror = "2.0.18"
